[project]
name = "pycircadian"
version = "0.1"
description = "Suspend-On-Idle Daemon for GNU/Linux systemd"
dependencies = [
    "dbus-python",
    "psutil",
]

[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
pycircadian = "pycircadian.__main__:circadian_main"
